# hadertoy

./: .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix  hadertoy.cabal  stack.yaml
app/: Main.hs
shaders/: demo.glsl  mandelbrot.glsl
src/: Hadertoy.hs
test/: Spec.hs
