cabal-version:       2.4
name:                hadertoy
version:             0.0.0.0
synopsis:            Haskell implementation of Glumpy
description:         See README for more info
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tristanC@wombatt.eu>
copyright:           2020 Tristan de Cacqueray
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base
                     , bytestring
                     , vector
                     , GLFW-b
                     , OpenGL
                     , OpenGLRaw

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hadertoy

executable hadertoy
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hadertoy
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hadertoy-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hadertoy
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark hadertoy-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , hadertoy
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
